--- a/app/css/scss/_base-styles.scss
+++ b/app/css/scss/_base-styles.scss
@@ -29,7 +29,7 @@ img{border:0}
 
 html {
   background-color: white;
-  background-image: url(../img/the-gug.jpg);
+  background-image: url(../img/paper.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
