--- a/app/css/scss/_gallery-template.scss
+++ b/app/css/scss/_gallery-template.scss
@@ -1,4 +1,7 @@
 .gallery {
+  .gallery-control {
+    display: none;
+  }
   .slide:last-child .gallery-panel {
     border-bottom: none;
     margin-bottom: 0;
