--- a/app/css/scss/_gallery-template-super-enhanced.scss
+++ b/app/css/scss/_gallery-template-super-enhanced.scss
@@ -92,6 +92,9 @@
     &.half-push-down-text .gallery-text {
       margin-top: 1rem;
     }
+    &.pull-up-text .gallery-text {
+      margin-top: 0;
+    }
   }
 
 }
