Cleaned up css files to remove all the nesting and updated the notes

--- a/app/css/scss/_about-enhanced.scss
+++ b/app/css/scss/_about-enhanced.scss
@@ -1,38 +1,46 @@
+/*=============================================================================
+    ABOUT - ENHANCED
+=============================================================================*/
+
 #about {
   display: inline-block;
-  .about-image {
-    float: left;
-    width: 42%;
-    margin-top: 2rem;
-    @media only screen and (min-width: 56.5rem) {
-      margin-top: 1.25rem;
-    }
-    @media only screen and (min-width: 65rem) {
-      margin-top: 0.5rem;
-    }
-    img {
-      max-height: 380px;
-    }
+}
+
+.about-image-container {
+  float: left;
+  width: 42%;
+  margin-top: 2rem;
+  @media only screen and (min-width: 56.5rem) {
+    margin-top: 1.25rem;
   }
-  .about-words {
-    float: right;
-    width: 55%;
-    margin-left: 2.5%%;
-    header {
-      margin-top: 0;
-    }
-    p {
-      text-align: justify;
-    }
-    .about-body {
-      word-spacing: -2px;
-    }
-    .about-specialties {
-      margin-top: 0.75rem;
-    }
-    ul {
-      list-style: disc;
-      padding-left: 2.5rem;
-    }
+  @media only screen and (min-width: 65rem) {
+    margin-top: 0.5rem;
   }
+}
+
+.about-image {
+  max-height: 380px;
+}
+
+.about-body-container {
+  float: right;
+  width: 55%;
+  margin-left: 2.5%%;
+}
+
+.about-header {
+  margin-top: 0;
+}
+
+.about-body {
+  word-spacing: -2px;
+}
+
+.about-specialties-header {
+  margin-top: 0.75rem;
+}
+
+.about-specialties {
+  list-style: disc;
+  padding-left: 2.5rem;
 }
