--- a/app/css/scss/_base-styles-enhanced.scss
+++ b/app/css/scss/_base-styles-enhanced.scss
@@ -1,3 +1,7 @@
+/*=============================================================================
+    BASE STYLES - ENHANCED
+=============================================================================*/
+
 @include animation-keyframes(super-rainbow) {
   0% {
     background-color: $Color-Rainbow-Transparent;
