--- a/app/css/scss/_about.scss
+++ b/app/css/scss/_about.scss
@@ -1,25 +1,29 @@
-#about {
-  .about-image img {
-    display: block;
-    margin: 0 auto;
-  }
-  .about-words {
-    .about-body {
-      word-spacing: -2px;
-    }
-    .about-specialties {
-      margin-top: 1.5rem;
-    }
-    header {
-      margin: 1rem 0 0.5rem;
-      text-align: center;
-    }
-    p {
-      text-align: justify;
-    }
-    ul {
-      list-style: disc;
-      padding-left: 2.5rem;
-    }
-  }
+/*=============================================================================
+    ABOUT
+=============================================================================*/
+
+.about-image {
+  display: block;
+  margin: 0 auto;
+}
+
+.about-header {
+  margin: 1rem 0 0.5rem;
+  text-align: center;
+}
+
+.about-body {
+  text-align: justify;
+  word-spacing: -2px;
+}
+
+.about-specialties-header {
+  text-align: left;
+  margin-top: 1.5rem;
+}
+
+.about-specialties {
+  list-style: disc;
+  padding-left: 2.5rem;
+  text-align: left;
 }
