--- a/app/css/scss/_entrance-enhanced.scss
+++ b/app/css/scss/_entrance-enhanced.scss
@@ -1,10 +1,15 @@
+/*=============================================================================
+    ENTRANCE - ENHANCED
+=============================================================================*/
+
 #entrance {
   padding: 2rem 0;
-  .what-i-am {
-    width: 28rem;
-    margin: 0 auto;
-    h2 {
-      font-size: 2.5rem;
-    }
-  }
+}
+
+.entrance-body-container {
+  width: 28rem;
+}
+
+.entrance-body {
+  font-size: 2.5rem;
 }
