--- a/app/css/scss/_entrance.scss
+++ b/app/css/scss/_entrance.scss
@@ -1,21 +1,33 @@
+/*=============================================================================
+    ENTRANCE
+=============================================================================*/
+
 #entrance {
-  margin: 0 auto;
   padding: 5%;
-  .what-i-am {
-    text-align: center;
-    width: 14.5rem;
-    margin: 0 auto;
-    h2 {
-      color: #CCC;
-      font-size: 1.4rem;
-      letter-spacing: -2px;
-    }
-    i {
-      color: $Color-Dark-Grey;
-      font-style: normal;
-    }
+}
+
+#entrance + #guts-footer {
+  display: none;
+}
+
+.entrance-body-container {
+  text-align: center;
+  margin: 0 auto;
+  width: 14.5rem;
+  @media only screen and (min-width: 25rem) {
+    width: 20rem;
   }
-  + #guts-footer {
-    display: none;
+}
+
+.entrance-body {
+  color: #CCC;
+  font-size: 1.4rem;
+  letter-spacing: -2px;
+  @media only screen and (min-width:25rem) {
+    font-size: 1.825rem;
+  }
+  > i {
+    color: $Color-Dark-Grey;
+    font-style: normal;
   }
 }
