--- a/app/css/scss/_gallery-exceptions-enhanced.scss
+++ b/app/css/scss/_gallery-exceptions-enhanced.scss
@@ -1,3 +1,7 @@
+/*=============================================================================
+    GALLERY EXCEPTIONS - ENHANCED
+=============================================================================*/
+
 @media only screen and (min-width: 75rem) {
   #resizely {
     .resizely-bottom-image img {
