--- a/app/css/scss/_guts.scss
+++ b/app/css/scss/_guts.scss
@@ -1,8 +1,11 @@
+/*=============================================================================
+    GUTS
+=============================================================================*/
+
 #guts {
   background-color: #FFF;
   border-bottom: 2px solid $Color-Light-Grey;
   padding: 3.35rem 10% 0;  /* 3.35rem needed to push #guts below the nav */
-  text-align: center;
   -webkit-transform: translate3d(0, 0, 0);
   @include transition(max-height $CSS-slideUpDown linear);
   &.slideDown {
@@ -13,22 +16,20 @@
     max-height: 0;
     overflow: hidden;
   }
-  .content {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    -webkit-transform: translate3d(0, 0, 0);
-    &.fadeIn {
-      opacity: 1;
-      visibility: visible;
-      @include transition(opacity $CSS-fadeInOut linear);
-    }
-    &.fadeOut {
-      opacity: 0;
-      visibility: hidden;
-      @include transition(visibility 0ms linear $CSS-fadeInOut, opacity $CSS-fadeInOut linear);
-    }
-    &.resume {
-      margin-top: 1.5rem;
-    }
+}
+
+.content {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  -webkit-transform: translate3d(0, 0, 0);
+  &.fadeIn {
+    opacity: 1;
+    visibility: visible;
+    @include transition(opacity $CSS-fadeInOut linear);
+  }
+  &.fadeOut {
+    opacity: 0;
+    visibility: hidden;
+    @include transition(visibility 0ms linear $CSS-fadeInOut, opacity $CSS-fadeInOut linear);
   }
 }
