--- a/app/css/scss/_lightbox.scss
+++ b/app/css/scss/_lightbox.scss
@@ -1,3 +1,7 @@
+/*=============================================================================
+    LIGHTBOX
+=============================================================================*/
+
 #lightbox {
   display: none;
   position: fixed;
@@ -8,24 +12,28 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 9999;
   text-align: center;
-  .lightbox-image-container {
-    position: relative;
-    margin: 2rem 2.5rem 0;
-  }
-  .lightbox-image-inner-container {
-    position: relative;
-  }
-  .lightbox-close {
-    font-weight: 800;
-    font-size: 1.5rem;
-    cursor: pointer;
-    position: absolute;
-    margin: 1rem 1rem 0 0;
-    right: 0;
-  }
-  #lightbox-image {
-    border: 5px solid #aaa;
-    background-color: #fff;
-    padding: 2rem;
-  }
+}
+
+.lightbox-image-container {
+  position: relative;
+  margin: 2rem 2.5rem 0;
+}
+
+.lightbox-image-inner-container {
+  position: relative;
+}
+
+.lightbox-close {
+  font-weight: 800;
+  font-size: 1.5rem;
+  cursor: pointer;
+  position: absolute;
+  margin: 1rem 1rem 0 0;
+  right: 0;
+}
+
+#lightbox-image {
+  border: 5px solid #AAA;
+  background-color: #FFF;
+  padding: 2rem;
 }
