--- a/app/css/scss/_navigation-enhanced.scss
+++ b/app/css/scss/_navigation-enhanced.scss
@@ -1,3 +1,7 @@
+/*=============================================================================
+    NAVIGATION - ENHANCED
+=============================================================================*/
+
 #main-header {
   height: 7.5rem;
   position: relative;
@@ -14,78 +18,84 @@
     @include flex-flow(row nowrap);
     @include flex-justify-content(space-between);
   }
-  .nav-item {
-    border-top: none;
-    border-bottom: 5px solid #FFF;
-    font-family: $Font-DIN-Light;;
-    font-size: 1.15rem;
-    line-height: 4.5;
-    text-transform: uppercase;
-    @include transition(border-bottom 200ms ease-in-out);
+}
+
+.nav-item {
+  border-top: none;
+  border-bottom: 5px solid #FFF;
+  font-family: $Font-DIN-Light;;
+  font-size: 1.15rem;
+  line-height: 4.5;
+  text-transform: uppercase;
+  @include transition(border-bottom 200ms ease-in-out);
+  @media only screen and (min-width: 70rem) {
+    font-size: 1.35rem;
+  }
+  &:not(.nav-logo) {
+    display: block !important;  /* Have to use !important because jQuery inline styles */
+  }
+  &:not(.nav-logo).is-active {
+    background-color: transparent;
+    border-bottom: 5px solid $Color-Light-Blue;
+    color: $Color-Light-Grey;
+  }
+  &:not(.nav-logo) a {
+    padding-left: 0;
+  }
+  &:not(.nav-logo):hover {
+    background-color: transparent;
+    border-bottom: 5px solid $Color-Light-Blue;
+    color: $Color-Light-Grey;
+  }
+  > a {
+    color: inherit;
+  }
+}
+
+.nav-logo {
+  border-bottom: none;
+  &:hover .color-fader {
+    @include animation(super-rainbow 10s infinite linear);
+  }
+}
+
+.logo-image {
+  border-radius: 51%;
+  height: 62px;
+  width: 62px;
+  @media only screen and (min-width: 70rem) {
+    height: 71px;
+    width: 71px;
+  }
+  > img {  /* Image must be +1px larger than container so background colors don't bleed */
+    width: 65px;
+    @include transition(width 300ms ease-in-out);
     @media only screen and (min-width: 70rem) {
-      font-size: 1.35rem;
-    }
-    a {
-      color: inherit;
-    }
-    &:not(.logo) {
-      display: block !important;  /* Have to use !important because jQuery inline styles */
-    }
-    &:not(.logo).is-active {
-      background-color: transparent;
-      border-bottom: 5px solid $Color-Light-Blue;
-      color: $Color-Light-Grey;
-    }
-    &:not(.logo) a {
-      padding-left: 0;
-    }
-    &:not(.logo):hover {
-      background-color: transparent;
-      border-bottom: 5px solid $Color-Light-Blue;
-      color: $Color-Light-Grey;
+      width: 74px;
     }
   }
-  .logo {
-    border-bottom: none;
-    &:hover .color-fader {
-      @include animation(super-rainbow 10s infinite linear);
-    }
-  }
-  .logo-image {
-    border-radius: 51%;
-    height: 62px;
-    width: 62px;
+}
+
+.logo-text {
+  display: none;  /* Experimenting with no text for a while */
+  margin-top: 0;
+  > h1 {
+    color: $Color-Dark-Grey;
+    font-size: 1.5rem;
     @media only screen and (min-width: 70rem) {
-      height: 71px;
-      width: 71px;
-    }
-    img {  /* Image must be at least +1px than container so background colors don't bleed */
-      width: 65px;
-      @include transition(width 300ms ease-in-out);
-      @media only screen and (min-width: 70rem) {
-        width: 74px;
-      }
+      font-size: 2rem;
     }
   }
-  .logo-text {
-    display: none;  /* Experimenting with no text for a while */
-    margin-top: 0;
-    h1 {
-      color: $Color-Dark-Grey;
-      font-size: 1.5rem;
-      @media only screen and (min-width: 70rem) {
-        font-size: 2rem;
-      }
-    }
-  }
-  .screen.logo {
-    display: block;
-    line-height: 0;
-    padding: 0 0 1rem;
-  }
-  .handheld.logo {
-    display: none;
-  }
+}
+
+.screen.nav-logo {
+  display: block;
+  line-height: 0;
+  padding: 0 0 1rem;
+}
+
+.handheld.nav-logo {
+  display: none;
 }
 
 .nav-toggle {
