--- a/app/css/scss/_no-support.scss
+++ b/app/css/scss/_no-support.scss
@@ -1,3 +1,7 @@
+/*=============================================================================
+    NO-SUPPORT
+=============================================================================*/
+
 #no-support {
   display: none;
   background-color: rgba(0, 0, 0, 0.3);
@@ -5,21 +9,26 @@
   height: 100%;
   width: 100%;
   z-index: 999;
-  .no-support-inner {
-    position: relative;
-    max-width: 50rem;
-    width: 90%;
-    background-color: $Color-White;
-    margin: 4rem auto 0;
-    padding: 1.5rem 0.75rem;
+  i {
+    font-size: 1.1rem;
   }
-  .no-support-text {
-    display: inline-block;
-    margin: 0 2rem;
-    p:first-child,
-    p:last-child {
-      margin: 1.25rem 0;
-    }
+}
+
+.no-support-inner {
+  position: relative;
+  max-width: 50rem;
+  width: 90%;
+  background-color: $Color-White;
+  margin: 4rem auto 0;
+  padding: 1.5rem 0.75rem;
+}
+
+.no-support-text {
+  display: inline-block;
+  margin: 0 2rem;
+  p:first-child,
+  p:last-child {
+    margin: 1.25rem 0;
   }
 }
 
@@ -29,14 +38,15 @@
   li {
     font-weight: 800;
   }
-  .no-support-downloads {
-    display: inline-block;
-    span {
-      float: left;
-      width: 25%;
-      background-color: #FFF;
-      text-align: center;
-      padding: 1rem;
-    }
+}
+
+.no-support-downloads {
+  display: inline-block;
+  .download {
+    float: left;
+    width: 25%;
+    background-color: #FFF;
+    text-align: center;
+    padding: 1rem;
   }
 }
