--- a/app/css/scss/_notes.scss
+++ b/app/css/scss/_notes.scss
@@ -1,42 +1,70 @@
 /*
 
-===================================================================================================
+===============================================================================
     NOTES
-===================================================================================================
+===============================================================================
 
-1.  IDs should only used on the outermost elements (one level below body, e.g. that contain
-    significant portions of content (the mini-pages injected into the <main id="guts"> container),
-    or elements that are used often as hooks in regards to scripting (again, the <main id="guts">
-    container). The reason for this is: a) Because I feel that IDs are good at indicating what is
-    and isn't a large, macro level container of content, and b) to easily target a specific
-    instance of reused content (for example, instead of creating a ".no-border" class with
-    "border: none;", only using it in one instance, and introducing presentation into the
-    structure, the same, single-serving style may be applied with, #resume .marquee-image, put in
-    a "_resume.scss" partial, and eventually imported into a styles.scss file, which is then
-    later minified).
+1.  IDs should only be used:
+      a. When it follows the spec (e.g. only one instance on page)
+      b. To describe unsemantic markup, when appropriate (see above)
+      c. On elements that serve as containers for a section (e.g. #no-support)
+      d. As hooks for JavaScript (e.g. #unsupported-features)
+      e. To target a specific instance of a class (#resume .marquee-image)
 
-2.  I'm not a very good speller, so there might be some spelling errors everywhere.
+2.  I'm not a very good speller
 
-3.  Most/All (depending when you read this) of the css selectors begin with either an ID or a
-    class name describing the subpage or module that they are a part of. IMO, when reading the
-    compressed css, this makes finding what you're looking for, or making sense of what you're
-    reading much easier. At the moment, Generic css rules are not proceeded with anything.
+3.  Selectors begin with a descriptive ID or class for easy debugging purposes
 
 4.  Use of !important is frowned upon, but at times necessary
 
 5.  All measurements are in REM or %
 
-6.  An exception to the that last rule is in measurements of very small size, e.g. border, border-
-    radius, line-spacing, etc.
+6.  An exception to the that last rule is on tiny measurements (e.g. border)
 
-7.  Use data:uris on plain images (data:uris hurt on mobile)
+7.  Use data:uris on small, plain images
 
-8.  Use spritesheets on more complex images
+8.  Readability is favored over performance
 
+9. I try not to target elements using tag selectors as much as possible
+
+10. Exceptions to that last rule will be preceded with an ID or class
+
+11. Exceptions will be tags that are already pretty semantic (e.g. img, h1, p)
+
+12. I try not to add classes just for the sake of styling as much as possible
+
+13. When rules 10 and 12 conflict, I try to choose what's best
+
+14. Occasionally, I like to use joined class selectors (.a.b) for readability
+
+15. Nesting beyond 3 levels is frowned upon, and even beyond 2 is ill advised
+
+16. Decimals are preceded with a 0 (e.g. 0.85 not .85)
+
+17. Hex codes are in all uppercase (e.g. #1A2B3C not #1a2b3C)
+
+n.  This is a living document
 
 --- SCSS & CSS STYLING/FORMATTING ---
 
+CSS
+---------
+h2,
+.class-name,
+#id-name {
+  property: attribute;  /comment/
+}
 
-n.  This is a living document
+SCSS
+----------
+#.selector/.selector {
+  @extends
+  property: attribute;
+  @includes
+  @media
+  &.adjoined-selector/:pseudo-selector
+  >.child-selector
+  .nested-selector
+}
 
 */
