--- a/app/css/scss/_portfolio.scss
+++ b/app/css/scss/_portfolio.scss
@@ -1,26 +1,29 @@
-#portfolio {
-  .portfolio-items {
-    @include flex-box;
-    @include flex-flow(row wrap);
+/*=============================================================================
+    PORTFOLIO
+=============================================================================*/
+
+.portfolio-items {
+  @include flex-box;
+  @include flex-flow(row wrap);
+}
+
+.portfolio-item {
+  border-bottom: 1px solid #A6A6A6;
+  border-right: 1px solid #A6A6A6;
+  text-align: center;
+  @include transition(background-color 250ms ease-in-out);
+  @include flex-basis(33.33%);
+  &:hover {
+    background-color: $Color-Light-Blue;
+    color: #FFF;
   }
-  .portfolio-item {
-    border-bottom: 1px solid #a6a6a6;
-    border-right: 1px solid #a6a6a6;
-    text-align: center;
-    @include transition(background-color 250ms ease-in-out);
-    @include flex-basis(33.33%);
-    &:hover {
-      background-color: $Color-Light-Blue;
-      color: #FFF;
-    }
-    &:nth-child(3n) {
-      border-right: none;
-    }
-    &:nth-last-child(3),
-    &:nth-last-child(2),
-    &:nth-last-child(1) {
-      border-bottom: none;
-    }
+  &:nth-child(3n) {
+    border-right: none;
+  }
+  &:nth-last-child(3),
+  &:nth-last-child(2),
+  &:nth-last-child(1) {
+    border-bottom: none;
   }
   a {
     display: block;
@@ -34,5 +37,9 @@
     margin: 0 auto;
     max-width: 90%;
     padding: 12.5% 0;
+  }
+  h3,
+  em {
+    display: none;
   }
 }
