--- a/app/css/scss/_portfolio.scss
+++ b/app/css/scss/_portfolio.scss
@@ -25,7 +25,7 @@
   &:nth-last-child(1) {
     border-bottom: none;
   }
-  a {
+  > a {
     display: block;
     @include transition(margin 300ms ease-in-out);
     &:hover {
