--- a/app/css/scss/_base-styles.scss
+++ b/app/css/scss/_base-styles.scss
@@ -47,10 +47,10 @@ img {
 
 .hyphenate {
    -ms-word-break: break-all;
-       word-break: break-all;
        word-break: break-word;
   -webkit-hyphens: auto;
      -moz-hyphens: auto;
+      -ms-hyphens: auto;
           hyphens: auto;
 }
 
